2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py, jhbuild/buildbot/changes.py,
	jhbuild/buildbot/factory.py, jhbuild/buildbot/scheduler.py,
	jhbuild/buildbot/status/web/feeder.py, jhbuild/buildbot/steps.py,
	jhbuild/buildbot/status/web/__init__.py: updated with header with
	license and copyright statements.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/steps.py: revert the passing of jhbuildrc as the
	jhbuildrc location on master has no use on slaves.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/steps.py, jhbuild/commands/bot.py: make the jhbuild
	config instance accessible to all buildbot stuff (necessary to get
	slaves with jhbuildrc != ~/.jhbuildrc working).

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: only chdir() once we are sure the directory
	exists.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: create python site-packages directories under
	jhbuild prefix as they won't be created by distutils.

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.24.modules: update dbus to 1.2.3

2008-08-13  William Jon McCann  <jmccann@redhat.com>

	* modulesets/bootstrap.modules: updated autoconf to 2.62 since it is
	now required by some modules (closes: #547676)

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py, jhbuild/buildbot/factory.py,
	jhbuild/buildbot/status/web/__init__.py, jhbuild/commands/bot.py:
	added a new jhbuild bot --start-server command to start the buildbot
	server; moved custom buildbot modules from buildbot/jhbuildbot/ to
	jhbuild/buildbot/.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: don't call os.makedirs() when path already
	exists.

2008-08-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: updated to work with jhbuildbot installed
	twisted and buildbot.

2008-08-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>
