@@ -35,7 +35,8 @@
 	makefile	CDATA	#IMPLIED
 	skip-autogen	(true|false) "false"
 	supports-non-srcdir-builds (yes|no) "yes"
-	autogen-template CDATA  #IMPLIED>
+	autogen-template CDATA  #IMPLIED
+	check-target	(true|false) "true">
 
 <!ELEMENT waf (branch,dependencies?,suggests?,after?)>
 <!-- Note: Here the ID type is not used as some existing IDs in modsets are not
