@@ -1,3 +1,7 @@
+2008-08-14  Frederic Peters  <fpeters@0d.be>
+
+	* C/jhbuild.xml: added explanation on check-target attribute.
+
 2008-08-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
         * es/es.po: Updated Spanish translation by Daniel Mustieles
