@@ -1,5 +1,12 @@
 2008-08-14  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/autotools.py, modulesets/moduleset.dtd,
+	modulesets/gnome-external-deps-2.24.modules: added a new check-target
+	attribute to <autotools> modules; for those that do *not* support
+	make check (hicolor-icon-theme, sqlite3).
+
+2008-08-14  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/__init__.py, jhbuild/buildbot/changes.py,
 	jhbuild/buildbot/factory.py, jhbuild/buildbot/scheduler.py,
 	jhbuild/buildbot/status/web/feeder.py, jhbuild/buildbot/steps.py,
